--- a/README
+++ b/README
@@ -1,1 +1,10 @@
-blabalbladnlbalbal
+## Table of contents
+* [General info](#general-info)
+* [Technologies](#technologies)
+
+## General info
+This project is a simple website for Food Savior GmbH.
+	
+## Technologies
+Project is created with:
+* Atom version: 1.42.0
