--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 ## Table of contents
-* [General info](#general-info)
-* [Technologies](#technologies)
+* [General info]
+* [Technologies]
 
 ## General info
 This project is a simple website for Food Savior GmbH.
